# fast-release

./: .gitignore  Cargo.toml  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml
crates/env-ci/: Cargo.toml
crates/env-ci/src/: builder.rs  lib.rs  util.rs
crates/env-ci/src/services/: git.rs  github.rs  gitlab.rs  mod.rs
crates/hosted-git-info/: Cargo.toml
crates/hosted-git-info/src/: from_url.rs  parse.rs
modules/fast-release/: Cargo.toml
modules/fast-release/src/: cli.rs  config.rs  constants.rs  error.rs  main.rs
modules/fast-release/src/git/: mod.rs
